# python/src/scorable/generated/openapi_aclient/models/evaluator_execution_result.py
@@ -32,7 +32,15 @@ class EvaluatorExecutionResult(BaseModel):
     cost: Optional[Union[StrictFloat, StrictInt]]
     execution_log_id: StrictStr
     justification: Optional[StrictStr]
-    __properties: ClassVar[List[str]] = ["evaluator_name", "score", "cost", "execution_log_id", "justification"]
+    confidence: Optional[Union[StrictFloat, StrictInt]]
+    __properties: ClassVar[List[str]] = [
+        "evaluator_name",
+        "score",
+        "cost",
+        "execution_log_id",
+        "justification",
+        "confidence",
+    ]
 
     model_config = ConfigDict(
         populate_by_name=True,
@@ -91,6 +99,11 @@ class EvaluatorExecutionResult(BaseModel):
         if self.justification is None and "justification" in self.model_fields_set:
             _dict["justification"] = None
 
+        # set to None if confidence (nullable) is None
+        # and model_fields_set contains the field
+        if self.confidence is None and "confidence" in self.model_fields_set:
+            _dict["confidence"] = None
+
         return _dict
 
     @classmethod
@@ -109,6 +122,7 @@ class EvaluatorExecutionResult(BaseModel):
                 "cost": obj.get("cost"),
                 "execution_log_id": obj.get("execution_log_id"),
                 "justification": obj.get("justification"),
+                "confidence": obj.get("confidence"),
             }
         )
         return _obj
